# tib-sibi-scraper

./: .gitignore  pyproject.toml
sibi_scraper/: audio_book.py  audio_book_list.py  book.py  book_list.py  cli.py  errors.py  failure_list.py  scraper.py  web.py
